2011-04-08  Dominic Cooney  <dominicc@google.com>

Reviewed by Kent Tamura.

        Make WK2 layoutTestController.shadowRoot return undefined, not
        null, when its argument is not an element.
        https://bugs.webkit.org/show_bug.cgi?id=58121

        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        (WTR::LayoutTestController::shadowRoot):

Canonical link: https://commits.webkit.org/73048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83270 268f45cc-cd09-0410-ab3c-d52691b4dbfc